@startuml course-work
scale 1.2
left to right direction

skinparam monochrome true
skinparam shadowing false
skinparam backgroundColor white
skinparam defaultFontColor black

skinparam ranksep 0.9
skinparam nodesep 0.8
skinparam linetype ortho

hide empty members
hide circle
hide stereotype
skinparam classAttributeIconSize 0
skinparam classVisibilityIconSize 0

skinparam class {
    AttributeFontSize 9
    FontSize 10
    Padding 6
    BackgroundColor white
    BorderColor black
    ArrowColor black
    BorderThickness 1
}
skinparam defaultFontSize 10

' ================== СУЩНОСТИ (Entities) ==================

class AbstractProduct {
    - name : string
    - category : string
    - quantity : int
    - unitPrice : double
    + getName() : string
    + getCategory() : string
    + getQuantity() : int
    + getUnitPrice() : double
    + setName(name : string)
    + setCategory(category : string)
    + setQuantity(quantity : int)
    + setUnitPrice(unitPrice : double)
    + {abstract} calculateTotalValue() : double
    + {abstract} getProductType() : string
}

class Product {
    - id : int
    + Product(name, category, quantity, unitPrice)
    + getId() : int
    + setId(id : int)
    + calculateTotalValue() : double
    + getProductType() : string
}

AbstractProduct <|-- Product

class OrderItem {
    + productId : int
    + productName : QString
    + category : QString
    + quantity : int
    + unitPrice : double
    + discountPercent : double
    + totalPrice : double
    + calculateTotal(discount : double) : void
}

enum OrderType {
    RETAIL
    WHOLESALE
}

class Order {
    - id : int
    - companyName : QString
    - contactPerson : QString
    - phone : QString
    - orderType : OrderType
    - orderDate : QDate
    - items : vector<OrderItem>
    - totalAmount : double
    - totalDiscount : double
    + getId() : int
    + getCompanyName() : QString
    + getContactPerson() : QString
    + getPhone() : QString
    + getOrderType() : OrderType
    + getOrderDate() : QDate
    + getItems() : const vector<OrderItem>&
    + getTotalAmount() : double
    + getTotalDiscount() : double
    + setCompanyName(name : QString)
    + setContactPerson(contact : QString)
    + setPhone(phone : QString)
    + setOrderType(type : OrderType)
    + setOrderDate(date : QDate)
    + setId(id : int)
    + addItem(item : OrderItem)
    + removeItem(productId : int)
    + updateItemQuantity(productId : int, quantity : int)
    + clearItems()
    + calculateTotal() : void
    + getOrderTypeString() : QString
}

Order *-- OrderItem

' ================== СЕРВИСЫ ==================

class InventoryService {
    - products : vector<shared_ptr<Product>>
    - writeOffHistory : vector<shared_ptr<Product>>
    + addProduct(product : shared_ptr<Product>) : void
    + updateProduct(id : int, product : shared_ptr<Product>) : void
    + deleteProduct(id : int) : void
    + getProduct(id : int) : shared_ptr<Product>
    + getAllProducts() : vector<shared_ptr<Product>>
    + writeOffProduct(id : int, quantity : int, reason : string) : void
    + addStock(id : int, quantity : int) : void
    + getWriteOffHistory() : const vector<shared_ptr<Product>>&
    + calculateTotalInventoryValue() : double
    + getTotalQuantity() : int
    + getTotalProductCount() : int
    + filterByCategory(category : string) : vector<shared_ptr<Product>>
}

class WriteOffCalculator {
    + calculateWriteOffValue(product : Product, quantity : int) : double
    + calculateTotalWriteOffValue(products : vector<shared_ptr<Product>>) : double
}

class WriteOffResult {
    + saved : bool
    + writeOffValue : double
}

class WriteOffService {
    + writeOffProduct(inventory : InventoryService,
                      db : DatabaseManager*,
                      productId : int,
                      quantity : int,
                      reason : QString,
                      productName : QString) : WriteOffResult
}

class InventoryAdjustmentResult {
    + itemsUpdated : int
    + quantityAdded : int
    + quantityWrittenOff : int
}

class InventoryAdjustmentService {
    + applyAdjustment(inventory : InventoryService,
                      db : DatabaseManager*,
                      id : int,
                      currentQty : int,
                      actualQty : int,
                      result : InventoryAdjustmentResult) : void
}

class ProductFilterService {
    + filterProducts(inventory : InventoryService,
                     category : QString,
                     searchText : QString)
      : vector<shared_ptr<Product>>
}

class ProductValidator {
    + isIdInRange(id : int) : bool
    + isIdUnique(inventory : InventoryService, id : int) : bool
    + validateId(inventory : InventoryService, id : int) : QString
}

class OrderResult {
    + saved : bool
    + totalAmount : double
}

class OrderService {
    + createOrder(inventory : InventoryService,
                  db : DatabaseManager,
                  order : Order) : OrderResult
}

class DiscountCalculator {
    + calculateDiscount(isWholesale : bool, quantity : int) : double
}

InventoryService --> Product
WriteOffService --> InventoryService
WriteOffService --> DatabaseManager
WriteOffService --> WriteOffCalculator
WriteOffService --> WriteOffResult
InventoryAdjustmentService --> InventoryService
InventoryAdjustmentService --> WriteOffService
InventoryAdjustmentService --> InventoryAdjustmentResult
ProductFilterService --> InventoryService
ProductValidator --> InventoryService
OrderService --> InventoryService
OrderService --> Order
OrderService --> DatabaseManager
OrderService --> OrderResult
DiscountCalculator --> OrderItem

' ================== ДАННЫЕ / МЕНЕДЖЕРЫ ==================

class DatabaseManager {
    + getInstance() : DatabaseManager*
    + initializeDatabase() : void
    + addProduct(product : Product) : bool
    + addOrder(order : Order) : bool
    + updateOrder(order : Order) : bool
    + getOrder(id : int) : Order
    + getAllOrders() : vector<Order>
    + addWriteOffRecord(id : int, quantity : int,
                        value : double,
                        reason : QString,
                        productName : QString) : bool
}

class FileManager {
    + saveToBinary(inventory : InventoryService, filename : string) : bool
    + loadFromBinary(inventory : InventoryService, filename : string) : bool
    + exportReportToText(inventory : InventoryService, filename : string) : bool
    + exportWriteOffHistoryToText(inventory : InventoryService,
                                  filename : string) : bool
}

DatabaseManager --> Product
DatabaseManager --> Order
FileManager --> InventoryService

' ================== UI ==================

class MainWindow {
    - inventoryManager : InventoryService*
    - dbManager : DatabaseManager*
    + addProduct() : void
    + writeOffProductByRow(row : int) : void
    + createOrder() : void
    + createInventorySection() : QWidget*
    + createOrdersSection() : QWidget*
    + createReportsSection() : QWidget*
}

class ProductDialog
class WriteOffDialog
class OrderDialog
class ReportDialog

MainWindow --> ProductDialog
MainWindow --> WriteOffDialog
MainWindow --> OrderDialog
MainWindow --> ReportDialog

MainWindow --> InventoryService
MainWindow --> DatabaseManager
MainWindow --> WriteOffService
MainWindow --> InventoryAdjustmentService
MainWindow --> ProductFilterService
MainWindow --> ProductValidator
MainWindow --> OrderService
MainWindow --> FileManager

OrderDialog --> Order
OrderDialog --> Product
ReportDialog --> InventoryService

@enduml